# Electrical_Usecases

./: .gitignore  1_Transmission_Line_Electric_Faults.ipynb  2_Inverter.ipynb  3_Power_Quality_Classification.ipynb  4_Power_Comsumption.ipynb  5_LSTM_household-electric-power.ipynb  README.md  pyproject.toml
datasets/power_quality/: outputTest.csv  outputTrain.csv
