[tool.poetry]
name = "electrical"
version = "0.1.0"
description = ""
authors = ["Jidhu Mohan <jidhu.mohan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
ipykernel = "^6.15.1"
seaborn = "^0.11.2"
plotly = "^5.9.0"
nbformat = "^5.4.0"
scikit-learn = "^1.1.1"
xgboost = "1.5^"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
